--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "creditcoin-price-tracker",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "private": true,
   "description": "Creditcoin Price Tracker",
   "type": "module",
@@ -24,6 +24,7 @@
     "@tanstack/react-query-persist-client": "^5.90.14",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "jotai": "^2.16.1",
     "lucide-react": "^0.562.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
